Added code to update relevant slider when an input box is updated
New code updates the relevant slider by detecting the id of the relevant slider from parent_slider attribute

--- a/input.html
+++ b/input.html
@@ -1,10 +1,10 @@
 <p>
   <label for="cb_p2_input_first_slider">First slider</label>
-  <input type="text" id="cb_p2_input_first_slider" class="cb_p2_slider_input_value" value="5" min="1" max="64" step="1"> 
+  <input type="text" id="cb_p2_input_first_slider" class="cb_p2_slider_input_value" value="5" min="1" max="64" step="1" parent_slider="cb_p2_value_slider_1"> 
 </p>
-<div class="cb_p2_value_slider" slider_value_target="cb_p2_input_first_slider"></div>
+<div class="cb_p2_value_slider" id="cb_p2_value_slider_1" slider_value_target="cb_p2_input_first_slider"></div>
 <p>
   <label for="cb_p2_input_second_slider">Second slider</label>
-  <input type="text" id="cb_p2_input_second_slider" class="cb_p2_slider_input_value" value="50" min="0" max="200" step="10">
+  <input type="text" id="cb_p2_input_second_slider" class="cb_p2_slider_input_value" value="50" min="0" max="200" step="10" parent_slider="cb_p2_value_slider_2">
 </p>
-<div class="cb_p2_value_slider" slider_value_target="cb_p2_input_second_slider"></div>
+<div class="cb_p2_value_slider" id="cb_p2_value_slider_2" slider_value_target="cb_p2_input_second_slider"></div>
